# StreamPoseML

./: .env  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MODULE_TESTS.md  Makefile  README-project-structure.md  README.md  RELEASE.md  RESTRUCTURING.md  RUN_TESTS.md  TESTING.md  TESTING_INSTRUCTIONS.md  Tiltfile  api_pytest.ini  build.sh  config.example.yaml  config.example.yml  config.yml  conftest.py  copy_example.sh  docker-compose.build.yml  docker-compose.local.yml  docker-compose.yml  environment.yml  fix_cross_imports.py  fix_imports.py  fix_imports.sh  fix_module_imports.py  fix_nested_imports.py  fix_test_imports.py  fix_test_paths.py  gradient_boosting.ipynb  kubernetes.yml  notebook.ipynb  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml  publish-to-pypi.yml  python-publish.yml
api/: Dockerfile  README.md  app.py  app.pyi  dev-requirements.txt  requirements-dev.txt  requirements.txt  run.py
api/.github/workflows/: ci.yml
api/tests/: README.md  conftest.py  test_app.py  test_integration.py  test_quick_recovery.py  test_websocket_recovery.py
docs/: requirements.txt
docs/source/: conf.py  conf.py.minimal  conf.py.new  index.rst
docs/source/api/: clients.rst  index.rst
docs/source/development/: contributing.rst  development_workflow.rst
docs/source/examples/: end_to_end_tutorial.rst  index.rst  notebook_walkthrough.rst
docs/source/guide/: annotations.rst  concepts.rst  index.rst  installation.rst  openpose_mediapipe_conversion.rst  quickstart.rst  segmentation_strategies.rst
docs/source/webapp/: index.rst  installation.rst  usage.rst
docs/source/workflows/: index.rst  video_processing.rst
example_data/input/source_annotations/: example_video.json
example_data/input/source_videos/: example_video.webm
mlflow/: Dockerfile  app.py  start_mlflow.sh
mock_bluetooth/: README.md  mock_bluetooth.js  package-lock.json  package.json
notebooks/: example_usage.ipynb
notebooks/scratchpad/: example_usage copy.ipynb
pose_parser/: CONTRIBUTING.md  Dockerfile  blaze_pose_frame.py  blaze_pose_sequence.py  dataloop_annotation_transformer.py  docker_entrypoint.sh  environment.yml  mediapipe_client.py  openpose_mediapipe_transformer.py  pose_parser.py  requirements.txt  run.py  video_data_service.py
pose_parser/api/: app.py
pose_parser/blaze_pose/: blaze_pose_frame.py  blaze_pose_frame_serializer.py  blaze_pose_sequence.py  blaze_pose_sequence_serializer.py  mediapipe_client.py
pose_parser/geometry/: angle.py  distance.py  joint.py  vector.py
pose_parser/notebooks/: data_transformations.ipynb  dataset_for_ui.ipynb  generate_dataset.ipynb  gradient_boosting.ipynb  load_model.ipynb  process_videos.ipynb  random_forest.ipynb
pose_parser/pose_parser/: poser_client.py  stream_pose_client.py
pose_parser/pose_parser/blaze_pose/: blaze_pose_frame.py  blaze_pose_sequence.py  mediapipe_client.py  openpose_mediapipe_transformer.py
pose_parser/pose_parser/geometry/: angle.py  distance.py  joint.py  vector.py
pose_parser/pose_parser/jobs/: build_and_format_dataset_job.py  process_video_job.py  (+1 more)
pose_parser/serializers/: angle_serializer.py  blaze_pose_frame_serializer.py  blaze_pose_sequence_serializer.py  joint_serializer.py  vector_serialzier.py
stream_pose_ml/: CONTRIBUTING.md  Dockerfile  LICENSE  __init__.py  ml_flow_client.py  pytest.ini  requirements.txt  run.py  stream_pose_client.py
stream_pose_ml/api/: app.py
stream_pose_ml/blaze_pose/: blaze_pose_frame.py  blaze_pose_sequence.py  enumerations.py  mediapipe_client.py  openpose_mediapipe_transformer.py
stream_pose_ml/geometry/: __init__.py  angle.py  distance.py  joint.py  vector.py
stream_pose_ml/jobs/: build_and_format_dataset_job.py  process_video_job.py  process_videos_job.py
stream_pose_ml/learning/: dataset.py  labeled_clip.py  labeled_frame.py  model_builder.py  sequence_transformer.py  temporal_feature_pooling.py  trained_model.py
stream_pose_ml/notebooks/: data_transformations.ipynb  dataset_for_ui_example.ipynb  example_usage.ipynb  generate_dataset.ipynb  generate_dataset_examples.ipynb  gradient_boosting.ipynb  gradient_boosting_example.ipynb  model_builder_example.ipynb  process_videos.ipynb  process_videos_example.ipynb  random_forest.ipynb  random_forest_example.ipynb  visualize_keypoints.ipynb
stream_pose_ml/old_module/: ml_flow_client.py  stream_pose_client.py
stream_pose_ml/serializers/: angle_serializer.py  blaze_pose_frame_serializer.py  blaze_pose_sequence_serializer.py  dataset_serializer.py  distance_serializer.py  joint_serializer.py  labeled_clip_serializer.py  labeled_frame_serializer.py  vector_serializer.py  vector_serialzier.py
stream_pose_ml/services/: annotation_transformer_service.py  segmentation_service.py  video_data_merge_service.py  video_data_service.py
stream_pose_ml/stream_pose_ml/: ml_flow_client.py  stream_pose_client.py
stream_pose_ml/tests/: __init__.py  conftest.py
stream_pose_ml/transformers/: sequence_transformer.py
stream_pose_ml/utils/: path_utility.py  pickler.py  utils.py
streamposeml-app/: Chart.yaml
streamposeml-app/templates/: _helpers.tpl
test/: test_blaze_pose_frame.py  test_blaze_pose_sequence.py  test_dataloop_annotation_transformer.py  test_mediapipe_client.py  test_video_data_service.py
test/blaze_pose/: test_blaze_pose_frame.py  test_blaze_pose_sequence.py  test_mediapipe_client.py
test/geometry/: test_angle.py  test_joint.py  test_vector.py
tests/: test_api_connectivity.py  test_ml_flow_timing.py  test_websocket_recovery.py
tests/api/: conftest.py  test_app.py  test_integration.py
web_ui/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web_ui/public/: index.html
web_ui/src/: App.css  App.js  App.jsx  ModelSelector.js  ModelSelector.jsx  PoseCapture.jsx  VideoLoad.jsx  VideoStream.js  VideoStream.jsx  WebBluetooth.js  WebBluetooth.jsx
(+817 files in other folders)
