[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream_pose_ml"
version = "0.2.1"
authors = [{ name = "Nate Green", email = "nate@nate.green" }]
description = "A toolkit for realtime video classification tasks."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "imbalanced_learn==0.10.1",
  "kneed==0.8.5",
  "matplotlib==3.7.0",
  "mediapipe>=0.10.21",
  "numpy==1.24.2",
  "opencv_contrib_python==4.7.0.68",
  "pandas==1.5.3",
  "PyWavelets==1.4.1",
  "PyYAML",
  "scikit_learn==1.2.1",
  "scipy==1.11.2",
  "seaborn==0.12.2",
  "tqdm==4.65.0",
  "tslearn==0.6.2",
  "xgboost==1.7.4",
  "mlflow>=2.18.0,<2.21.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-emoji", "pytest-cov", "black"]

[project.urls]
"Homepage" = "https://github.com/mrilikecoding/StreamPoseML"
"Bug Tracker" = "https://github.com/mrilikecoding/StreamPoseML/issues"

[tool.setuptools.packages.find]
include = ["stream_pose_ml*"]
exclude = [
  "tmp*",
  "web_ui*",
  "mlflow*",
  "notebooks*",
  "example_data*",
  "api*",
  "tests*",
  "build*",
]
