[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream_pose_ml"
version = "0.2.1"
authors = [{ name = "Nate Green", email = "nate@nate.green" }]
description = "A toolkit for realtime video classification tasks."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "imbalanced_learn==0.10.1",
  "kneed==0.8.5",
  "matplotlib==3.7.0",
  "mediapipe>=0.10.21",
  "numpy==1.24.2",
  "opencv_contrib_python==4.7.0.68",
  "pandas==1.5.3",
  "PyWavelets==1.4.1",
  "PyYAML",
  "scikit_learn==1.2.1",
  "scipy==1.11.2",
  "seaborn==0.12.2",
  "tqdm==4.65.0",
  "tslearn==0.6.2",
  "xgboost==1.7.4",
  "mlflow>=2.18.0,<2.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-emoji",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/mrilikecoding/StreamPoseML"
"Bug Tracker" = "https://github.com/mrilikecoding/StreamPoseML/issues"

[tool.hatch.build.targets.wheel]
packages = ["stream_pose_ml"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stream_pose_ml --cov-report=term-missing"
