[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream_pose_ml"
version = "0.2.2"
authors = [{ name = "Nate Green", email = "nate@nate.green" }]
description = "A toolkit for realtime video classification tasks."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "imbalanced_learn==0.10.1",
  "kneed==0.8.5",
  "matplotlib==3.7.0",
  "mediapipe>=0.10.18",
  "numpy==1.24.2",
  "opencv_contrib_python==4.8.1.78",
  "pandas==1.5.3",
  "PyWavelets==1.4.1",
  "PyYAML",
  "scikit_learn==1.2.1",
  "scipy==1.11.2",
  "seaborn==0.12.2",
  "tqdm==4.66.3",
  "tslearn==0.6.2",
  "xgboost==1.7.4",
  "mlflow>=2.18.0,<2.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-emoji",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "build",
    "twine",
]
api = [
    "Flask>=2.2.2",
    "Flask-Cors>=3.0.10",
    "Flask-SocketIO>=5.3.3",
    "Werkzeug>=2.2.2",
    "eventlet>=0.33.0",
    "dnspython>=2.2.1",
    "requests>=2.28.2",
    "python-engineio>=4.4.0",
]

[project.urls]
"Homepage" = "https://github.com/mrilikecoding/StreamPoseML"
"Bug Tracker" = "https://github.com/mrilikecoding/StreamPoseML/issues"

[tool.hatch.build.targets.wheel]
packages = ["stream_pose_ml"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["api/tmp/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/test_*.py" = ["E402"]
"**/*.ipynb" = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stream_pose_ml --cov-report=term-missing"

[dependency-groups]
dev = [
    "opencv-stubs>=0.0.12",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-emoji>=0.2.0",
    "python-engineio>=4.12.2",
    "types-flask-cors>=6.0.0.20250520",
    "types-flask-socketio>=5.5.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "pip-audit>=2.6.0",
]
api = [
    "Flask>=2.2.2",
    "Flask-Cors>=3.0.10",
    "Flask-SocketIO>=5.3.3",
    "Werkzeug>=2.2.2",
    "eventlet>=0.33.0",
    "dnspython>=2.2.1",
    "requests>=2.28.2",
    "python-engineio>=4.4.0",
]

[tool.mypy]
mypy_path = ["."]
exclude = ["api/tmp/"]